--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://schapke.me/booklet",
+  "homepage": "http://schapke.me",
   "name": "book-app",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,7 @@
     "react-pose": "^4.0.8",
     "react-redux": "^7.0.2",
     "react-scripts": "2.1.8",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1"
   },
   "scripts": {
