--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://schapke.me",
+  "homepage": "http://schapke.me/booklet",
   "name": "book-app",
   "version": "0.1.0",
   "private": true,
